raffia/tests/error/selectors/invalid-attr-6.snap
---
source: raffia/tests/error.rs
---
error: attribute selector value is expected
  ┌─ invalid-attr-6.css:1:14
  │
1 │ .class[attr= {}
  │              ^


